--- a/style.css
+++ b/style.css
@@ -35,14 +35,18 @@ h1 {
 
 .cor1 {
     background-color: #ED145B;
+    order: 1;
+    
 }
 
 .cor2 {
-    background-color: #EFB661;
+    background-color: #63B1BC;
+    order: 3;
 }
 
 .cor3 {
-    background-color: #63B1BC;
+    background-color: #EFB661;
+    order: 2;
 }
 
 .instrucoes {
